PLFM-8184: Lock when adding a part or completing upload